// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merkur component loadScriptAssets() function should create script elements for script assets 1`] = `
Array [
  Object {
    "async": "",
    "custom-element": "amp-fx-collection",
    "onerror": [Function],
    "onload": [Function],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": Object {
      "attr": Object {
        "async": true,
        "custom-element": "amp-fx-collection",
        "defer": false,
      },
      "name": "widget.js",
      "source": "http://localhost:4444/static/es9/widget.6961af42bfa3596bb147.js",
      "type": "script",
    },
  },
  Object {
    "defer": true,
    "onerror": [Function],
    "onload": [Function],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": Object {
      "name": "polyfill.js",
      "source": "http://localhost:4444/static/es9/polyfill.6961af42bfa3596bb147.js",
      "test": "var a;",
      "type": "script",
    },
  },
  Object {
    "onerror": [MockFunction],
    "onload": [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "text": "alert();",
  },
]
`;

exports[`Merkur component loadStyleAssets() function should create style elements for style assets 1`] = `
Array [
  Object {
    "onerror": [Function],
    "onload": [Function],
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "src": "http://localhost:4444/static/es9/widget.814e0cb568c7ddc0725d.css",
    "type": "text/css",
  },
  Object {
    "innerHTML": ".cssClass { margin-top: 5px; }",
    "onerror": [MockFunction],
    "onload": [MockFunction] {
      "calls": Array [
        Array [],
      ],
      "results": Array [
        Object {
          "type": "return",
          "value": undefined,
        },
      ],
    },
    "removeAttribute": [Function],
    "setAttribute": [Function],
    "type": "text/css",
  },
]
`;
